<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/error_message_here"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgEvent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleEvent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:scaleType="matrix"/>

    <ImageView
        android:id="@+id/imgLike"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        android:contentDescription="@string/favorite_events"
        android:src="@drawable/ic_favorite_24"
        android:tag="Not Saved"
        app:layout_constraintBottom_toTopOf="@+id/titleEvent"
        app:layout_constraintEnd_toEndOf="@+id/imgEvent" />

    <TextView
        android:id="@+id/titleEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgEvent"
        tools:text="Title" />

    <TextView
        android:id="@+id/eventOrganizer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleEvent"
        app:layout_constraintStart_toEndOf="@id/organizerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Penyelenggara"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/organizerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/organizer"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timeEvent"
        app:layout_constraintEnd_toStartOf="@id/eventOrganizer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEvent" />

    <TextView
        android:id="@+id/timeEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/timeTitle"
        app:layout_constraintTop_toBottomOf="@id/eventOrganizer"
        tools:text="Waktu Acara" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quota"
        app:layout_constraintEnd_toStartOf="@id/timeEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/organizerTitle" />

    <TextView
        android:id="@+id/quota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/quotaTitle"
        app:layout_constraintTop_toBottomOf="@id/timeEvent"
        app:layout_constraintBottom_toTopOf="@id/description"
        tools:text="Sisa Kuota" />

    <TextView
        android:id="@+id/quotaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toStartOf="@id/quota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeTitle"
        app:layout_constraintBottom_toTopOf="@id/description"
        android:textStyle="bold"
        android:text="@string/quota"/>

<!--    <WebView-->
<!--        android:id="@+id/webView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Deskripsi"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/quota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
<!--    </WebView>-->

    <Button
        android:id="@+id/btnRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>